harbor/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: project
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  # 这里设置你的域名
    - match: Host(`harbor.k3s.com`)
      kind: Rule
      services:
        - name: harbor-portal
          port: 80
  tls:
    secretName: harbor-ingress
